feat: setup cors and cors configs added
